Import translations from Crowdin

--- a/src/main/resources/assets/ltextras/lang/fr_fr.json
+++ b/src/main/resources/assets/ltextras/lang/fr_fr.json
@@ -1,106 +1,107 @@
 {
-  "block.ltextras.anemone_tentacles": "Anemone Tentacles",
-  "block.ltextras.black_concrete_powder_fake": "Black Concrete Powder Fake",
-  "block.ltextras.black_concrete_powder_slab": "Black Concrete Powder Slab",
-  "block.ltextras.black_concrete_powder_stairs": "Black Concrete Powder Stairs",
-  "block.ltextras.blue_glow_sticks": "Blue Glow Sticks",
-  "block.ltextras.boring_end_rod": "Boring End Rod",
-  "block.ltextras.brown_glow_sticks": "Brown Glow Sticks",
+  "block.ltextras.anemone_tentacles": "Tentacules d'anémone",
+  "block.ltextras.black_concrete_powder_fake": "Béton noir en poudre factice",
+  "block.ltextras.black_concrete_powder_slab": "Dalle de béton noir en poudre",
+  "block.ltextras.black_concrete_powder_stairs": "Escalier de béton noir en poudre",
+  "block.ltextras.blue_glow_sticks": "Bâtons lumineux bleus",
+  "block.ltextras.boring_end_rod": "Barre de l'End sans intérêt",
+  "block.ltextras.brown_glow_sticks": "Bâtons lumineux marron",
   "block.ltextras.buoy": "Bouée",
-  "block.ltextras.checkpoint": "Checkpoint",
-  "block.ltextras.cracked_stone_bricks_fence": "Cracked Stone Bricks Fence",
-  "block.ltextras.cracked_stone_bricks_slab": "Cracked Stone Bricks Slab",
-  "block.ltextras.cracked_stone_bricks_stairs": "Cracked Stone Bricks Stairs",
-  "block.ltextras.cracked_stone_bricks_wall": "Cracked Stone Bricks Wall",
+  "block.ltextras.checkpoint": "Point de sauvegarde",
+  "block.ltextras.cracked_stone_bricks_fence": "Barrière en pierre taillée craquelée",
+  "block.ltextras.cracked_stone_bricks_slab": "Dalle en pierre taillée craquelée",
+  "block.ltextras.cracked_stone_bricks_stairs": "Escalier en pierre taillée craquelée",
+  "block.ltextras.cracked_stone_bricks_wall": "Muret en pierre taillée craquelée",
   "block.ltextras.curtain": "Rideau",
-  "block.ltextras.cyan_glow_sticks": "Cyan Glow Sticks",
+  "block.ltextras.cyan_glow_sticks": "Bâtons lumineux cyan",
   "block.ltextras.cymodocea_rotundata": "Herbe aquatique",
   "block.ltextras.cymodocea_serrulata": "Herbe aquatique",
+  "block.ltextras.delighted_obsidian": "Obsidienne heureuse",
   "block.ltextras.enhalus_acoroides": "Herbe aquatique",
   "block.ltextras.enhalus_acoroides_block": "Bloc d'herbe aquatique",
-  "block.ltextras.fake_water": "Fausse eau",
-  "block.ltextras.fast_metal_ladder": "Fast Metal Ladder",
-  "block.ltextras.fast_rusty_metal_ladder": "Fast Rusty Metal Ladder",
-  "block.ltextras.glass_panel": "Glass Panel",
-  "block.ltextras.gold_block_fence": "Gold Block Fence",
-  "block.ltextras.gold_block_slab": "Gold Block Slab",
-  "block.ltextras.gold_block_stairs": "Gold Block Stairs",
-  "block.ltextras.gold_block_wall": "Gold Block Wall",
-  "block.ltextras.grass_grass": "Grass Grass",
-  "block.ltextras.green_anemone": "Green Anemone",
-  "block.ltextras.green_glow_sticks": "Green Glow Sticks",
+  "block.ltextras.fake_water": "Eau factice",
+  "block.ltextras.fast_metal_ladder": "Échelle en métal rapide",
+  "block.ltextras.fast_rusty_metal_ladder": "Échelle en métal rouillée rapide",
+  "block.ltextras.glass_panel": "Panneau en verre",
+  "block.ltextras.gold_block_fence": "Barrière en bloc d'or",
+  "block.ltextras.gold_block_slab": "Dalle de bloc d'or",
+  "block.ltextras.gold_block_stairs": "Escalier de bloc d'or",
+  "block.ltextras.gold_block_wall": "Muret de bloc d'or",
+  "block.ltextras.grass_grass": "Herbe herbeuse",
+  "block.ltextras.green_anemone": "Anémone verte",
+  "block.ltextras.green_glow_sticks": "Bâtons lumineux verts",
   "block.ltextras.halodule_pinifolia": "Herbe aquatique",
   "block.ltextras.halodule_uninervis": "Herbe aquatique",
   "block.ltextras.halodule_uninervis_block": "Bloc d'herbe aquatique",
   "block.ltextras.halophila_ovalis": "Herbe aquatique",
   "block.ltextras.halophila_spinulosa": "Herbe aquatique",
   "block.ltextras.halophila_spinulosa_block": "Bloc d'herbe aquatique",
-  "block.ltextras.heavy_spruce_door": "Heavy Spruce Door",
-  "block.ltextras.imposter_brain_coral": "Imposter Brain Coral",
-  "block.ltextras.imposter_brain_coral_block": "Imposter Brain Coral Block",
-  "block.ltextras.imposter_bubble_coral": "Imposter Bubble Coral",
-  "block.ltextras.imposter_bubble_coral_block": "Imposter Bubble Coral Block",
-  "block.ltextras.imposter_horn_coral": "Imposter Horn Coral",
-  "block.ltextras.imposter_horn_coral_block": "Imposter Horn Coral Block",
-  "block.ltextras.imposter_tube_coral": "Imposter Tube Coral",
-  "block.ltextras.imposter_tube_coral_block": "Imposter Tube Coral Block",
-  "block.ltextras.infertile_vine": "Infertile Vine",
-  "block.ltextras.light_blue_glow_sticks": "Light Blue Glow Sticks",
-  "block.ltextras.lightweight_barrier": "Lightweight Barrier",
-  "block.ltextras.lime_block": "Block of Lime",
-  "block.ltextras.lime_glow_sticks": "Lime Glow Sticks",
-  "block.ltextras.magenta_glow_sticks": "Magenta Glow Sticks",
-  "block.ltextras.matted_enhalus_acoroides": "Herbe aquatique emmêlée",
-  "block.ltextras.matted_halodule_uninervis": "Herbe aquatique emmêlée",
-  "block.ltextras.matted_halophila_spinulosa": "Herbe aquatique emmêlée",
-  "block.ltextras.matted_syringodium_isoetifolium": "Herbe aquatique emmêlée",
-  "block.ltextras.matted_thalassodendron_ciliatum": "Herbe aquatique emmêlée",
-  "block.ltextras.metal_ladder": "Metal Ladder",
-  "block.ltextras.metal_scaffolding": "Metal Scaffolding",
-  "block.ltextras.mob_controller": "Mob Controller",
-  "block.ltextras.moss_block_slab": "Moss Block Slab",
-  "block.ltextras.moss_block_stairs": "Moss Block Stairs",
+  "block.ltextras.heavy_spruce_door": "Porte lourde en sapin",
+  "block.ltextras.imposter_brain_coral": "Corail cerveau imposteur",
+  "block.ltextras.imposter_brain_coral_block": "Bloc de corail cerveau imposteur",
+  "block.ltextras.imposter_bubble_coral": "Corail bulles imposteur",
+  "block.ltextras.imposter_bubble_coral_block": "Bloc de corail bulles imposteur",
+  "block.ltextras.imposter_horn_coral": "Corail corné imposteur",
+  "block.ltextras.imposter_horn_coral_block": "Bloc de corail corné imposteur",
+  "block.ltextras.imposter_tube_coral": "Corail tubulaire imposteur",
+  "block.ltextras.imposter_tube_coral_block": "Bloc de corail tubulaire imposteur",
+  "block.ltextras.infertile_vine": "Lianes stériles",
+  "block.ltextras.light_blue_glow_sticks": "Bâtons lumineux bleu clair",
+  "block.ltextras.lightweight_barrier": "Barrière légère",
+  "block.ltextras.lime_block": "Bloc de citron vert",
+  "block.ltextras.lime_glow_sticks": "Bâtons lumineux vert clair",
+  "block.ltextras.magenta_glow_sticks": "Bâtons lumineux magenta",
+  "block.ltextras.matted_enhalus_acoroides": "Bloc d'herbe aquatique emmêlée",
+  "block.ltextras.matted_halodule_uninervis": "Bloc d'herbe aquatique emmêlée",
+  "block.ltextras.matted_halophila_spinulosa": "Bloc d'herbe aquatique emmêlée",
+  "block.ltextras.matted_syringodium_isoetifolium": "Bloc d'herbe aquatique emmêlée",
+  "block.ltextras.matted_thalassodendron_ciliatum": "Bloc d'herbe aquatique emmêlée",
+  "block.ltextras.metal_ladder": "Échelle en métal",
+  "block.ltextras.metal_scaffolding": "Échafaudage en métal",
+  "block.ltextras.mob_controller": "Contrôleur de créatures",
+  "block.ltextras.moss_block_slab": "Dalle de bloc de mousse",
+  "block.ltextras.moss_block_stairs": "Escalier de bloc de mousse",
   "block.ltextras.old_rope": "Vieille corde",
-  "block.ltextras.orange_glow_sticks": "Orange Glow Sticks",
-  "block.ltextras.paracord": "Paracord",
-  "block.ltextras.particle_emitter": "Particle Emitter",
-  "block.ltextras.passable_barrier": "Passable Barrier",
+  "block.ltextras.orange_glow_sticks": "Bâtons lumineux orange",
+  "block.ltextras.paracord": "Paracorde",
+  "block.ltextras.particle_emitter": "Émetteur de particules",
+  "block.ltextras.passable_barrier": "Barrière franchissable",
   "block.ltextras.pianguas": "Pianguas",
-  "block.ltextras.pink_glow_sticks": "Pink Glow Sticks",
-  "block.ltextras.polished_andesite_wall": "Polished Andesite Wall",
-  "block.ltextras.polished_diorite_wall": "Polished Diorite Wall",
-  "block.ltextras.polished_granite_wall": "Polished Granite Wall",
-  "block.ltextras.purple_anemone": "Purple Anemone",
-  "block.ltextras.purple_glow_sticks": "Purple Glow Sticks",
-  "block.ltextras.quartz_block_fence": "Quartz Block Fence",
-  "block.ltextras.quartz_block_wall": "Quartz Block Wall",
-  "block.ltextras.red_glow_sticks": "Red Glow Sticks",
+  "block.ltextras.pink_glow_sticks": "Bâtons lumineux roses",
+  "block.ltextras.polished_andesite_wall": "Muret d'andésite polie",
+  "block.ltextras.polished_diorite_wall": "Muret en diorite polie",
+  "block.ltextras.polished_granite_wall": "Muret en granite poli",
+  "block.ltextras.purple_anemone": "Anémone violette",
+  "block.ltextras.purple_glow_sticks": "Bâtons lumineux violets",
+  "block.ltextras.quartz_block_fence": "Barrière en bloc de quartz",
+  "block.ltextras.quartz_block_wall": "Muret en bloc de quartz",
+  "block.ltextras.red_glow_sticks": "Bâtons lumineux rouges",
   "block.ltextras.reeds": "Roseaux",
-  "block.ltextras.rusted_steel_girder": "Rusted Steel Girder",
-  "block.ltextras.rusting_steel_girder": "Rusting Steel Girder",
-  "block.ltextras.rusty_iron_bars": "Rusty Iron Bars",
-  "block.ltextras.rusty_metal_ladder": "Rusty Metal Ladder",
-  "block.ltextras.rusty_painted_metal": "Rusty Painted Metal",
-  "block.ltextras.rusty_painted_metal_fence": "Rusty Painted Metal Fence",
-  "block.ltextras.rusty_painted_metal_slab": "Rusty Painted Metal Slab",
-  "block.ltextras.rusty_painted_metal_stairs": "Rusty Painted Metal Stairs",
-  "block.ltextras.rusty_painted_metal_wall": "Rusty Painted Metal Wall",
-  "block.ltextras.sliced_lime": "Sliced Lime",
-  "block.ltextras.smooth_light_gray_stained_glass": "Smooth Light Gray Stained Glass",
-  "block.ltextras.speedy_black_concrete_powder": "Speedy Black Concrete Powder",
-  "block.ltextras.speedy_cracked_stone_bricks": "Speedy Cracked Stone Bricks",
-  "block.ltextras.speedy_dirt_path": "Speedy Dirt Path",
-  "block.ltextras.speedy_gravel": "Speedy Gravel",
-  "block.ltextras.speedy_quartz_block": "Speedy Quartz Block",
-  "block.ltextras.speedy_smooth_stone": "Speedy Smooth Stone",
-  "block.ltextras.speedy_spruce_slab": "Speedy Spruce Slab",
-  "block.ltextras.speedy_stone_bricks": "Speedy Stone Bricks",
-  "block.ltextras.steel_girder": "Steel Girder",
-  "block.ltextras.stone_bricks_fence": "Stone Bricks Fence",
-  "block.ltextras.stone_fence": "Stone Fence",
-  "block.ltextras.stone_wall": "Stone Wall",
-  "block.ltextras.submerged_lily_pad": "Submerged Lily Pad",
-  "block.ltextras.sugar_cane": "Sugar Cane",
+  "block.ltextras.rusted_steel_girder": "Poutre en acier rouillée",
+  "block.ltextras.rusting_steel_girder": "Poutre en acier rouillée",
+  "block.ltextras.rusty_iron_bars": "Barreaux de fer rouillés",
+  "block.ltextras.rusty_metal_ladder": "Échelle en métal rouillée",
+  "block.ltextras.rusty_painted_metal": "Métal peint rouillé",
+  "block.ltextras.rusty_painted_metal_fence": "Barrière en métal peint rouillé",
+  "block.ltextras.rusty_painted_metal_slab": "Dalle de métal peint rouillé",
+  "block.ltextras.rusty_painted_metal_stairs": "Escalier de métal peint rouillé",
+  "block.ltextras.rusty_painted_metal_wall": "Muret de métal peint rouillé",
+  "block.ltextras.sliced_lime": "Tranche de citron vert",
+  "block.ltextras.smooth_light_gray_stained_glass": "Verre lisse gris clair",
+  "block.ltextras.speedy_black_concrete_powder": "Béton noir en poudre rapide",
+  "block.ltextras.speedy_cracked_stone_bricks": "Pierre taillée craquelée rapide",
+  "block.ltextras.speedy_dirt_path": "Chemin de terre rapide",
+  "block.ltextras.speedy_gravel": "Gravier rapide",
+  "block.ltextras.speedy_quartz_block": "Bloc de quartz rapide",
+  "block.ltextras.speedy_smooth_stone": "Roche lisse rapide",
+  "block.ltextras.speedy_spruce_slab": "Dalle en sapin rapide",
+  "block.ltextras.speedy_stone_bricks": "Pierre taillée rapide",
+  "block.ltextras.steel_girder": "Poutre en acier",
+  "block.ltextras.stone_bricks_fence": "Barrière en pierre taillée",
+  "block.ltextras.stone_fence": "Barrière en roche",
+  "block.ltextras.stone_wall": "Muret de roche",
+  "block.ltextras.submerged_lily_pad": "Nénuphar submergé",
+  "block.ltextras.sugar_cane": "Canne à sucre",
   "block.ltextras.syringodium_isoetifolium": "Herbe aquatique",
   "block.ltextras.syringodium_isoetifolium_block": "Bloc d'herbe aquatique",
   "block.ltextras.tall_enhalus_acoroides": "Haute herbe aquatique",
@@ -110,36 +111,60 @@
   "block.ltextras.thalassia_hemprichii": "Herbe aquatique",
   "block.ltextras.thalassodendron_ciliatum": "Herbe aquatique",
   "block.ltextras.thalassodendron_ciliatum_block": "Bloc d'herbe aquatique",
-  "block.ltextras.thorn_stem": "Thorn Stem",
-  "block.ltextras.water_barrier": "Water Barrier",
-  "block.ltextras.white_glow_sticks": "White Glow Sticks",
-  "block.ltextras.yellow_glow_sticks": "Yellow Glow Sticks",
+  "block.ltextras.thorn_stem": "Tige épineuse",
+  "block.ltextras.water_barrier": "Barrière d'eau",
+  "block.ltextras.white_glow_sticks": "Bâtons lumineux blancs",
+  "block.ltextras.yellow_glow_sticks": "Bâton lumineux jaunes",
+  "chat.ltextras.message_translated": "Ce message a été traduit par une machine et peut être inexact. Vous pouvez voir le message d'origine en survolant la barre blanche à gauche.",
+  "commands.nametag.success": "Toujours afficher les nametags : %s",
   "commands.tpa.general_error": "Impossible de se téléporter",
-  "commands.tpa.help.back": "/back - Se téléporter à l'endroit d'origine avant la téléportation",
-  "commands.tpa.help.tpa": "/tpa <joueur> - Demander la téléportation à un joueur",
+  "commands.tpa.help.back": "/back - Se téléporter à l'endroit antérieur à la téléportation",
+  "commands.tpa.help.tpa": "/tpa <joueur> - Demander à se téléporter à un joueur",
   "commands.tpa.help.tpaccept": "/tpaccept <joueur> - Accepter la demande de téléportation d'un joueur. Utilisez \"all\" pour accepter toutes les demandes en attente",
-  "commands.tpa.here": "[here]",
-  "commands.tpa.no_self_teleport": "Vous ne pouvez pas vous téléporter sur vous-même",
+  "commands.tpa.here": "[ici]",
+  "commands.tpa.no_self_teleport": "Vous ne pouvez pas vous téléporter à vous-même",
+  "commands.tpa.not_allowed_here": "La téléportation n'est pas autorisée ici",
   "commands.tpa.pending_request_exists": "Une demande est toujours en attente",
   "commands.tpa.player_not_found": "Joueur introuvable",
   "commands.tpa.request": "%s veut se téléporter à vous. Cliquez sur %s (/tpaccept %s) pour accepter",
   "commands.tpa.request_not_found": "Aucune demande de téléportation",
   "commands.tpa.request_sent": "Demande envoyée",
-  "commands.tpa.too_much": "You are doing that too much",
+  "commands.tpa.too_much": "Vous utilisez trop de fois cette commande",
   "commands.tpa.tp_accepted": "%s a accepté votre demande de téléportation. Utilisez /back pour revenir en arrière",
-  "effect.ltextras.fish_eye": "Fish Eye",
-  "entity.ltextras.collectible": "Collectible",
+  "commands.warp.general_error": "Impossible de se rendre là-bas",
+  "commands.warp.not_found": "Destination introuvable",
+  "commands.warp.success": "Téléportation vers %s",
+  "effect.ltextras.fish_eye": "Œil de poisson",
+  "entity.ltextras.collectible": "Objet de collection",
   "entity.ltextras.hologram": "Hologramme",
-  "entity.ltextras.party_beam": "Party Beam",
-  "item.ltextras.collectible_basket": "Collectible Basket",
-  "item.ltextras.entity_wand": "Entity Wand",
+  "entity.ltextras.party_beam": "Rayon festif",
+  "entity.ltextras.ravekoa_dance1": "Ravekoa Dance1",
+  "entity.ltextras.ravekoa_dance2": "Ravekoa Dance2",
+  "entity.ltextras.ravekoa_dj": "Ravekoa Dj",
+  "invite.ltextras.club_1.bottom": "Saviez-vous que les déguisements résistaient au feu ?",
+  "invite.ltextras.club_1.top": "Nous avons besoin de vous.\nPortez un déguisement.\nIls nous observent.",
+  "invite.ltextras.club_2.bottom": "J'ai entendu dire que la limonade était bonne.",
+  "invite.ltextras.club_2.top": "On se voit là-bas. \nPortez un déguisement.\nPrenez un verre.",
+  "item.ltextras.collectible_basket": "Panier à objets de collection",
+  "item.ltextras.collectible_basket.locked": "Votre panier d'objets à collectionner a été verrouillé ici !",
+  "item.ltextras.collectible_compass": "Boussole à objets à collectionner",
+  "item.ltextras.collectible_compass.already_used": "Cette boussole pointe déjà vers un objet à collectionner. Si vous voulez trouver autre chose, vous allez devoir en trouver une nouvelle !",
+  "item.ltextras.collectible_compass.fail": "La boussole n'a pas été en mesure de trouver le moindre objet à collectionner que vous n'avez pas dans le coin. Essayez peut-être ailleurs ?",
+  "item.ltextras.collectible_compass.success": "👀 La boussole a trouvé un objet à collectionner que vous n'avez pas encore, et pointe désormais dans sa direction.",
+  "item.ltextras.entity_wand": "Baguette d'entités",
   "item.ltextras.image": "Image",
-  "item.ltextras.invite": "Invite",
-  "item.ltextras.tropicoin": "TropiCoin",
+  "item.ltextras.invite": "Invitation",
+  "item.ltextras.tropical_map": "Carte tropicale",
+  "item.ltextras.tropicoin": "TropiPièce",
   "itemGroup.ltextras.ltextras": "LTExtras",
+  "screen.ltextras.translation_prompt.incoming": "Traduire ce que je lis",
+  "screen.ltextras.translation_prompt.message": "Ce serveur est multilingue ! Nous ferons de notre mieux pour traduire le chat pour vous, mais pour ce faire, nous avons besoin de savoir quelle langue vous parlerez et aimeriez voir.\n\nL'anglais, l'espagnol et le français sont actuellement pris en charge.",
+  "screen.ltextras.translation_prompt.outgoing": "Traduire ce que j'écris",
+  "screen.ltextras.translation_prompt.title": "Traduction du chat",
+  "screen.ltextras.translation_prompt.unrecognized": "Malheureusement, nous ne sommes pas en mesure de traduire cette langue ! Vos messages seront envoyés et reçus dans leur langue d'origine.",
   "spawnitems.restored_successfully": "Objets restaurés !",
-  "spawnitems.set_not_restorable": "The spawn item set %s cannot be restored!",
-  "spawnitems.unknown_set": "Unknown spawn item set: %s",
+  "spawnitems.set_not_restorable": "L'objet de l'ensemble du spawn %s ne peut pas être récupéré !",
+  "spawnitems.unknown_set": "Objet de l'ensemble du spawn inconnu : %s",
   "toast.collectible.item": " + %s",
-  "toast.collectible.title": "New Collectible!"
+  "toast.collectible.title": "Nouveaux objets à collectionner !"
 }
