Import translations from Crowdin

--- a/src/main/resources/assets/ltextras/lang/fr_fr.json
+++ b/src/main/resources/assets/ltextras/lang/fr_fr.json
@@ -115,7 +115,7 @@
   "block.ltextras.water_barrier": "Barrière d'eau",
   "block.ltextras.white_glow_sticks": "Bâtons lumineux blancs",
   "block.ltextras.yellow_glow_sticks": "Bâton lumineux jaunes",
-  "chat.ltextras.message_translated": "Ce message a été traduit par une machine et peut être inexact. Vous pouvez voir le message d'origine en survolant la barre blanche à gauche.",
+  "chat.ltextras.message_translated": "Ce message a été traduit par une machine et peut donc être inexact. Vous pouvez voir le message d'origine en survolant la barre blanche à gauche.",
   "commands.nametag.success": "Toujours afficher les nametags : %s",
   "commands.tpa.general_error": "Impossible de se téléporter",
   "commands.tpa.help.back": "/back - Se téléporter à l'endroit antérieur à la téléportation",
@@ -129,23 +129,23 @@
   "commands.tpa.request": "%s veut se téléporter à vous. Cliquez sur %s (/tpaccept %s) pour accepter",
   "commands.tpa.request_not_found": "Aucune demande de téléportation",
   "commands.tpa.request_sent": "Demande envoyée",
-  "commands.tpa.too_much": "Vous utilisez trop de fois cette commande",
+  "commands.tpa.too_much": "Vous avez trop utilisé cette commande",
   "commands.tpa.tp_accepted": "%s a accepté votre demande de téléportation. Utilisez /back pour revenir en arrière",
   "commands.warp.general_error": "Impossible de se rendre là-bas",
   "commands.warp.not_found": "Destination introuvable",
   "commands.warp.success": "Téléportation vers %s",
   "effect.ltextras.fish_eye": "Œil de poisson",
-  "entity.ltextras.collectible": "Objet de collection",
+  "entity.ltextras.collectible": "Objet à collectionner",
   "entity.ltextras.hologram": "Hologramme",
   "entity.ltextras.party_beam": "Rayon festif",
-  "entity.ltextras.ravekoa_dance1": "Ravekoa Dance1",
-  "entity.ltextras.ravekoa_dance2": "Ravekoa Dance2",
-  "entity.ltextras.ravekoa_dj": "Ravekoa Dj",
+  "entity.ltextras.ravekoa_dance1": "Ravekoa Dance 1",
+  "entity.ltextras.ravekoa_dance2": "Ravekoa Dance 2",
+  "entity.ltextras.ravekoa_dj": "DJ Ravekoa",
   "invite.ltextras.club_1.bottom": "Saviez-vous que les déguisements résistaient au feu ?",
   "invite.ltextras.club_1.top": "Nous avons besoin de vous.\nPortez un déguisement.\nIls nous observent.",
   "invite.ltextras.club_2.bottom": "J'ai entendu dire que la limonade était bonne.",
   "invite.ltextras.club_2.top": "On se voit là-bas. \nPortez un déguisement.\nPrenez un verre.",
-  "item.ltextras.collectible_basket": "Panier à objets de collection",
+  "item.ltextras.collectible_basket": "Panier d'objets à collectionner",
   "item.ltextras.collectible_basket.locked": "Votre panier d'objets à collectionner a été verrouillé ici !",
   "item.ltextras.collectible_compass": "Boussole à objets à collectionner",
   "item.ltextras.collectible_compass.already_used": "Cette boussole pointe déjà vers un objet à collectionner. Si vous voulez trouver autre chose, vous allez devoir en trouver une nouvelle !",
