Update strings from Crowdin

--- a/src/main/resources/assets/ltextras/lang/fr_fr.json
+++ b/src/main/resources/assets/ltextras/lang/fr_fr.json
@@ -7,7 +7,7 @@
   "block.ltextras.boring_end_rod": "Barre de l'End sans intérêt",
   "block.ltextras.brown_glow_sticks": "Bâtons lumineux marron",
   "block.ltextras.buoy": "Bouée",
-  "block.ltextras.checkpoint": "Point de sauvegarde",
+  "block.ltextras.checkpoint": "Checkpoint",
   "block.ltextras.cracked_stone_bricks_fence": "Barrière en pierre taillée craquelée",
   "block.ltextras.cracked_stone_bricks_slab": "Dalle en pierre taillée craquelée",
   "block.ltextras.cracked_stone_bricks_stairs": "Escalier en pierre taillée craquelée",
@@ -145,8 +145,8 @@
   "invite.ltextras.club_1.top": "Nous avons besoin de vous.\nPortez un déguisement.\nIls nous observent.",
   "invite.ltextras.club_2.bottom": "J'ai entendu dire que la limonade était bonne.",
   "invite.ltextras.club_2.top": "On se voit là-bas. \nPortez un déguisement.\nPrenez un verre.",
-  "item.ltextras.collectible_basket": "Panier d'objets à collectionner",
-  "item.ltextras.collectible_basket.locked": "Votre panier d'objets à collectionner a été verrouillé ici !",
+  "item.ltextras.collectible_basket": "Panier d'objets",
+  "item.ltextras.collectible_basket.locked": "Votre panier d'objets a été verrouillé ici !",
   "item.ltextras.collectible_compass": "Boussole à objets à collectionner",
   "item.ltextras.collectible_compass.already_used": "Cette boussole pointe déjà vers un objet à collectionner. Si vous voulez trouver autre chose, vous allez devoir en trouver une nouvelle !",
   "item.ltextras.collectible_compass.fail": "La boussole n'a pas été en mesure de trouver le moindre objet à collectionner que vous n'avez pas dans le coin. Essayez peut-être ailleurs ?",
